--- a/src/Index.html
+++ b/src/Index.html
@@ -14,15 +14,16 @@
 
 <body>
     <div class="move hidden-lg">
-        <!-- 暂时留给移动端 -->
+        <!-- 暂时留给移动端头部 -->
     </div>
     <div class="head_top visible-lg"></div>
     <div class="header visible-lg"></div>
-    <div class="banner">
+    <!-- 轮播图部分 -->
+    <div class="banner ">
         <div class="coustomer visible-lg">
             <img src="images/customer.png" alt="">
         </div>
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <div id="carousel-example-generic" class="carousel slide visible-lg" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators visible-lg">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active">1</li>
@@ -51,32 +52,256 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Controls -->
-            <!-- <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a> -->
         </div>
-        <div class="tab_search">
+    </div>
+    <div class="center w visible-lg ">
+        <!-- 搜索框部分 -->
+        <div class="tab_search w">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
-                <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
-                <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
-                <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+                <li role="presentation" class="active"><a href="#libraryCatalog" aria-controls="libraryCatalog" role="tab" data-toggle="tab">馆藏目录</a></li>
+                <li role="presentation"><a href="#academicSearch" aria-controls="academicSearch" role="tab" data-toggle="tab">珞珈学术搜索</a></li>
+                <li role="presentation"><a href="#ebook" aria-controls="ebook" role="tab" data-toggle="tab">电子书刊</a></li>
+                <li role="presentation"><a href="#dataBase" aria-controls="dataBase" role="tab" data-toggle="tab">数据库</a></li>
+                <li role="presentation"><a href="#scholars" aria-controls="scholars" role="tab" data-toggle="tab">百度学术</a></li>
+                <li role="presentation"><a href="#siteSearch" aria-controls="siteSearch" role="tab" data-toggle="tab">站内搜索</a></li>
             </ul>
-
             <!-- Tab panes -->
             <div class="tab-content">
-                <div role="tabpanel" class="tab-pane active" id="home">...</div>
-                <div role="tabpanel" class="tab-pane" id="profile">...</div>
-                <div role="tabpanel" class="tab-pane" id="messages">...</div>
-                <div role="tabpanel" class="tab-pane" id="settings">...</div>
+                <div role="tabpanel" class="tab-pane active" id="libraryCatalog">
+                    <div class="search clearfix">
+                        <div class="dropdown fl">
+                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                     全面搜索
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li><a href="#">Separated link</a></li>
+                            </ul>
+                        </div>
+                        <div class="search_box fl"><input type="text" placeholder="请输入关键词"><span> <img src="images/search.png" alt=""> 查询</span></div>
+                    </div>
+                    <div class="data_base">
+                        <p>常用数据库: <span></span></p>
+                    </div>
+                    <div class="wailian">
+                        <div class="clearfix">
+                            <p class="fl">中文：</p>
+                            <ul class="clearfix fl">
+                                <li>知网</li>
+                                <li>万方</li>
+                                <li>北大法宝</li>
+                                <li>读秀</li>
+                                <li>人民日报</li>
+                            </ul>
+                        </div>
+                        <div class="clearfix">
+                            <p class="fl">外文：</p>
+                            <ul class="clearfix fl">
+                                <li>SCI</li>
+                                <li>Scopus</li>
+                                <li>JSTOR</li>
+                                <li>lexis</li>
+                                <li>heinonline</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="academicSearch">...</div>
+                <div role="tabpanel" class="tab-pane" id="ebook">...</div>
+                <div role="tabpanel" class="tab-pane" id="dataBase">...</div>
+                <div role="tabpanel" class="tab-pane" id="scholars">...</div>
+                <div role="tabpanel" class="tab-pane" id="siteSearch">...</div>
+            </div>
+        </div>
+    </div>
+    <div class="serve-box  w">
+        <div class="serve">
+            <div class="row">
+                <div class="col-lg-2 action">
+                    <a href="#">
+                        <img src="images/default/Self-borrowing.png" alt="">
+                        <img src="images/choose/Self-borrowingC.png" alt="">
+                        <p>借阅服务</p>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#">
+                        <img src="images/default/subscribe.png" alt="">
+                        <img src="images/choose/subscribeC.png" alt="">
+                        <p>预约服务</p>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#">
+                        <img src="images/default/subject.png" alt="">
+                        <img src="images/choose/subjectC.png" alt="">
+                        <p>学科服务</p>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#">
+                        <img src="images/default/cards.png" alt="">
+                        <img src="images/choose/cardsC.png" alt="">
+                        <p>证卡服务</p>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#">
+                        <img src="images/default/document delivery.png" alt="">
+                        <img src="images/choose/document deliveryC.png" alt="">
+                        <p>文献传递</p>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#">
+                        <img src="images/default/sci-tech.png" alt="">
+                        <img src="images/choose/sci-techC.png" alt="">
+                        <p>科技查新</p>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#">
+                        <img src="images/default/Resource.png" alt="">
+                        <img src="images/choose/Resource.png" alt="">
+                        <p>资源荐购</p>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#">
+                        <img src="images/default/Micro fabric.png" alt="">
+                        <img src="images/choose/Micro fabricC.png" alt="">
+                        <p>小布微课</p>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#">
+                        <img src="images/default/donate.png" alt="">
+                        <img src="images/choose/donateC.png" alt="">
+                        <p>捐赠</p>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#">
+                        <img src="images/default/lostfound.png" alt="">
+                        <img src="images/choose/lostfoundC.png" alt="">
+                        <p>失物招领</p>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#">
+                        <img src="images/default/consult.png" alt="">
+                        <img src="images/choose/consultC.png" alt="">
+                        <p>咨询服务</p>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#">
+                        <span>更多</span>
+                        <p>...</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="news w">
+        <div class="row">
+            <div class="news-title">新闻公告</div>
+            <div class="col-lg-6 col-sm-12">
+                <div>
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li role="presentation" class="active"><a href="#note" aria-controls="note" role="tab" data-toggle="tab">通知公告</a></li>
+                        <li role="presentation"><a href="#resource" aria-controls="resource" role="tab" data-toggle="tab">资源动态</a></li>
+                        <li role="presentation"><a href="#active" aria-controls="active" role="tab" data-toggle="tab">培训与活动</a></li>
+                        <li>
+                            <a href="#">MORE →</a>
+                        </li>
+                    </ul>
+                    <!-- Tab panes -->
+                    <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane active" id="note">
+                            <ul>
+                                <li>
+                                    <a href="#" class="clearfix">
+                                        <div class="news-left fl">
+                                            <h4>关于组织参加“我和我的祖国”书法绘画摄影作品大赛活动的通知</h4>
+                                            <p>武汉大学图书馆里关于组织参加“我和我的祖国”书法绘画摄影作品大赛活动的通知...</p>
+                                        </div>
+                                        <div class="news-right fr">
+                                            <span>27</span>
+                                            <div>2019/06</div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="clearfix">
+                                        <div class="news-left fl">
+                                            <p>武汉大学图书馆里关于组织参加“我和我的祖国”书法绘画摄影作品大赛活动的通知...</p>
+                                        </div>
+                                        <div class="news-right fr">
+                                            <div>2019/06/27</div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="clearfix">
+                                        <div class="news-left fl">
+                                            <p>武汉大学图书馆里关于组织参加“我和我的祖国”书法绘画摄影作品大赛活动的通知...</p>
+                                        </div>
+                                        <div class="news-right fr">
+                                            <div>2019/06/27</div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="clearfix">
+                                        <div class="news-left fl">
+                                            <p>武汉大学图书馆里关于组织参加“我和我的祖国”书法绘画摄影作品大赛活动的通知...</p>
+                                        </div>
+                                        <div class="news-right fr">
+                                            <div>2019/06/27</div>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="resource">...</div>
+                        <div role="tabpanel" class="tab-pane" id="active">...</div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-lg-6 col-sm-12 today-active ">
+                <div>
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li role="presentation" class="active"><a href="#today" aria-controls="today" role="tab" data-toggle="tab">近日活动</a></li>
+                        <li>
+                            <a href="#">MORE →</a>
+                        </li>
+                    </ul>
+                    <!-- Tab panes -->
+                    <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane active" id="today">
+                            <div>
+                                <div class="news_top">
+                                    <ul>
+                                        <li>3</li>
+                                        <li>4</li>
+                                        <li>5</li>
+                                        <li>6</li>
+                                        <li>7</li>
+                                    </ul>
+                                </div>
+                                <div class="news_foot"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
